# ClashMark

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT.md  CONTEXT_API.md  CONTRIBUTING.md  ClashMark — Анализ коллизий.html  ClashMark — Обучение моделей.html  Dockerfile  FIXES.md  INSTRUCTION.md  LICENSE  MANIFEST.in  OPTIMIZATION.md  README.md  SECURITY.md  SETTINGS_FIXES.md  TRAINING_FIXES.md  app.py  category_pairs.yaml  compare_images.py  count_pairs.py  docker-compose.yaml  pipeline_clashmark_predict.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.image_index_cache/: index_12fc7c2fd6cde754584103165eba9cad.pkl  index_3966b9ceacff8d0eff9d8445d1343a82.pkl  index_4fadeb4739dad3167786c9d4a646f8b5.pkl  index_94ef2e48390615e73f639ed0f6af7a78.pkl  index_d279d3fea607e8fc72b4afc1099c46d2.pkl
ClashMark — Анализ коллизий_files/: scripts.js
core/: image_utils.py  xml_utils.py
ml/: dataset.py  inference.py  model.py  train.py
model/: model_train_log.json
static/: scripts.js  style.css
templates/: analyze.html  base.html  index.html  macros.html  settings.html  train.html  train_progress.html
test_data/: All.xml
web/: inference.py  progress.py  routes.py  settings.py  train.py  utils.py
